@@ -416,6 +416,10 @@ The <tt>tabs</tt> tool was created with <i>fluid</i>. It tests
 correct hiding and redisplaying of tabs, navigation across tabs, 
 resize behavior, and no unneeded redrawing of invisible widgets.
 
+<P>The <tt>tabs</tt> application shows the <tt>Fl_Tabs</tt> widget
+on the left and the <tt>Fl_Wizard</tt> widget on the right side 
+for direct comparison of these two panel management widgets.
+
 <h3><a name="threads">threads</h3>
 FLTK can be used in a multithreading environment. There are some
 limitations, mostly due to the underlying operating system. 
