@@ -1,5 +1,8 @@
 CHANGES IN FLTK 1.1.8
 
+	- Added automated little helpers to Sudoku 
+	- Added example code for Wizard with the
+	  Tabs demo (STR #1564)
 	- Optimized Fl_Tabs drawing for speed (STR #1520)
 	- OS X resource fork now obsolete (STR #1453)
 	- Added chapter 10 about multithreading (STR #1532, 
